# docman

./: .gitignore  CLAUDE.md  LICENSE  PROMPT_ENGINEERING_ANALYSIS.md  README.md  prompt-engineering-analysis.md  pyproject.toml
alembic/versions/: ad30f6583811_phase_1_add_stale_content_detection_and_.py  caf8a3b37206_convert_pending_operations_to_.py
docs/: TEST_SUITE_RECOMMENDATIONS.md  prompt-engineering-analysis-high-priority.md  prompt-engineering-analysis-low-priority.md  prompt-engineering-analysis-medium-priority.md
src/docman/: __init__.py  cli.py  config.py  database.py  file_operations.py  llm_config.py  llm_providers.py  llm_wizard.py  model_download.py  models.py  path_alignment.py  path_security.py  processor.py  prompt_builder.py  repo_config.py  repository.py
src/docman/alembic/: __init__.py  env.py
src/docman/alembic/versions/: 4e81d9d2857f_separate_documents_and_copies_schema.py  678450063de1_add_organization_status_to_document_.py  6e165e275682_add_documents_table.py  ad30f6583811_phase_1_add_stale_content_detection_and_.py  caf8a3b37206_convert_pending_operations_to_.py  eda12c183552_remove_confidence_from_operations.py  f37f338691aa_add_pending_operations_table.py  f5e26cb194bb_add_prompt_hash_to_pending_operations.py  ff7089ab2955_add_original_file_path_and_original_.py
src/docman/cli/: __init__.py  config.py  debug_prompt.py  dedupe.py  define.py  ignore.py  init.py  llm.py  pattern.py  plan.py  review.py  scan.py  status.py  unmark.py  utils.py
src/docman/prompt_templates/: system_prompt.j2  user_prompt.j2
tests/: conftest.py
tests/integration/: __init__.py  test_app_config_integration.py  test_apply_integration.py  test_config_integration.py  test_database_integration.py  test_debug_prompt_integration.py  test_dedupe_integration.py  test_ignore_integration.py  test_init_integration.py  test_llm_commands_integration.py  test_pattern_commands_integration.py  test_plan_integration.py  test_reject_integration.py  test_reset_integration.py  test_review_integration.py  test_scan_integration.py  test_status_integration.py  test_unmark_integration.py
tests/unit/: __init__.py  test_cli_helpers.py  test_config.py  test_database.py  test_duplicate_queries.py  test_file_operations.py  test_helpers.py  test_llm_config.py  test_llm_provider_security.py  test_llm_providers.py  test_llm_providers_errors.py  test_llm_wizard.py  test_models.py  test_path_alignment.py  test_path_security.py  test_processor.py  test_prompt_builder.py  test_repo_config.py  test_repository.py  test_variable_patterns.py
