[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docman"
version = "0.1.0"
description = "A CLI tool for organizing documents using docling and LLM models"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "alisterpineda" }
]
dependencies = [
    "click>=8.1.7",
]

[project.scripts]
docman = "docman.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
