[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docman"
version = "0.1.0"
description = "A CLI tool for organizing documents using docling and LLM models"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "alisterpineda" }
]
dependencies = [
    "click>=8.1.7",
    "platformdirs>=4.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.1",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "docling>=2.0.0",
    "keyring>=25.0.0",
    "google-generativeai>=0.3.0",
    "jinja2>=3.1.0",
]

[project.scripts]
docman = "docman.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.0",
    "types-sqlalchemy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/docman"]
include = [
    "src/docman/alembic.ini",
    "src/docman/alembic/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/docman/alembic.ini",
    "src/docman/alembic/**",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=docman",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
